syntax = "proto3";
option csharp_namespace = "M4Webapp.Shared.Protos.Identity.v1";
package identity.v1;
service IdentityService { rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse); }
message ValidateTokenRequest { string token = 1; }
message ValidateTokenResponse { bool is_valid = 1; string user_id = 2; repeated string roles = 3; }
